--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
     "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1"
   }
 }
